--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,1 @@
-/A38.class
-/Armoire.class
-/Batiment.class
-/Demo.class
-/Emprunt.class
-/Interface.class
-/Materiel$Etat.class
-/Materiel.class
-/Modele.class
-/Peripherique.class
-/Personne.class
-/PersonneMorale.class
-/PersonnePhysique$STATUT.class
-/PersonnePhysique.class
-/Salle.class
-/Terminal.class
-/Utilisateur.class
-/testgit.class
+*.class
